//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.credentials;

import "keys.proto";
import "google/protobuf/any.proto";

// TODO(burdon): Use default from codec-protobuf
message Message {
  required google.protobuf.Any payload = 1;
}



//
// A generic container message used whenever messages are signed (e.g. PartyCredential)
//
message SignedMessage {
  //
  // Provides the common metadata needed for all signed objects.
  //
  message Signed {
    required string created = 1;                         // RFC-3339 datetime string.
    required bytes nonce = 2;
    required google.protobuf.Any payload = 10;           // The payload to be signed.
  }

  //
  // The signature data itself.
  //
  message Signature {
    required PubKey key = 1;                       // The publicKey of the keypair that made this signature.
    required bytes signature = 2;                 // The bytes of the signature.
    KeyChain keyChain = 3;                        // Optional. The certification chain of SignedMessages for this key.
  }

  required Signed signed = 1;                     // The signed message contents.
  repeated Signature signatures = 2;              // An array of Signatures, one for each key that signed the message.
}
